@@ -1,5 +1,10 @@
 2002-02-11  Alexandre Oliva  <aoliva@redhat.com>
 
+	* config/tc-sparc.c (U0x80000000l, U0xffffffffl): New constants.
+	Use all over.
+
+2002-02-11  Alexandre Oliva  <aoliva@redhat.com>
+
 	* config/tc-sh.c (dot): Removed unused function.
 
 2002-02-10  Richard Henderson  <rth@redhat.com>
